agregue nuevas cosas